feat: update contact links to WhatsApp for improved accessibility

--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
                                     <i class="far fa-phone"></i>
                                 </div>
                                 <div class="offcanvas__contact-text" bis_skin_checked="1">
-                                    <a href="tel:+54 9 3516 35-8705">+54 9 3516 35-8705</a>
-                                </div>
+                                    <a href="https://wa.me/5493516358705?text=Hola%20quiero%20información" </div>
                             </li>
                         </ul>
                         <div class="header-button mt-4" bis_skin_checked="1">
@@ -273,7 +272,8 @@
                     <div class="header-right d-flex justify-content-end align-items-center" bis_skin_checked="1">
 
                         <div class="main-button" bis_skin_checked="1">
-                            <a href="contact.html"> <span class="theme-btn"> EMPEZAR YA </span></a>
+                            <a href="https://wa.me/5493516358705?text=Hola%20quiero%20información" target="_blank"><span
+                                    class="theme-btn"> EMPEZAR YA </span></a>
                         </div>
                         <div class="header__hamburger d-xl-none my-auto" bis_skin_checked="1">
                             <div class="sidebar__toggle" bis_skin_checked="1">
@@ -1114,7 +1114,8 @@
                                             </li>
                                         </ul>
                                         <div class="price-button" bis_skin_checked="1">
-                                            <a href="pricing.html" class="theme-btn">Empecemos Ahora<i
+                                            <a href="https://wa.me/5493516358705?text=Hola%20quiero%20información"
+                                                target="_blank" class="theme-btn">Empecemos Ahora<i
                                                     class="fa-solid fa-arrow-right"></i></a>
                                         </div>
                                     </div>
@@ -1170,7 +1171,8 @@
                                             </li>
                                         </ul>
                                         <div class="price-button" bis_skin_checked="1">
-                                            <a href="pricing.html" class="theme-btn">Empecemos Ahora<i
+                                            <a href="https://wa.me/5493516358705?text=Hola%20quiero%20información"
+                                                class="theme-btn" target="_blank">Empecemos Ahora<i
                                                     class="fa-solid fa-arrow-right-long"></i></a>
                                         </div>
                                     </div>
@@ -1228,7 +1230,8 @@
                                             </li>
                                         </ul>
                                         <div class="price-button" bis_skin_checked="1">
-                                            <a href="pricing.html" class="theme-btn">Empecemos Ahora<i
+                                            <a href="https://wa.me/5493516358705?text=Hola%20quiero%20información"
+                                                class="theme-btn" target="_blank">Empecemos Ahora<i
                                                     class="fa-solid fa-arrow-right-long"></i></a>
                                         </div>
                                     </div>
@@ -1282,7 +1285,8 @@
                                             </li>
                                         </ul>
                                         <div class="price-button" bis_skin_checked="1">
-                                            <a href="pricing.html" class="theme-btn">Empecemos Ahora<i
+                                            <a href="https://wa.me/5493516358705?text=Hola%20quiero%20información"
+                                                class="theme-btn" target="_blank">Empecemos Ahora<i
                                                     class="fa-solid fa-arrow-right-long"></i></a>
                                         </div>
                                     </div>
@@ -1594,7 +1598,7 @@
                                     </div>
                                     <div class="content" bis_skin_checked="1">
                                         <h3>
-                                            <a href="tel:+54 9 3516 35-8705">+54 9 3516 35-8705</a>
+                                            +54 9 3516 35-8705</a>
                                         </h3>
                                     </div>
                                 </div>
@@ -1820,7 +1824,8 @@
                 </h2>
                 <div class="main-button wow fadeInUp" data-wow-delay=".5s" bis_skin_checked="1"
                     style="visibility: hidden; animation-delay: 0.5s; animation-name: none;">
-                    <a href="#"> <span class="theme-btn"> habla con un ESPECIALISTA</span></a>
+                    <a href="https://wa.me/5493516358705?text=Hola%20quiero%20información" target="_blank"> <span
+                            class="theme-btn"> habla con un ESPECIALISTA</span></a>
                 </div>
             </div>
         </div>
