--- a/index.html
+++ b/index.html
@@ -51,49 +51,43 @@
     cz-shortcut-listen="true">
 
     <!-- Preloader Start -->
-    <div id="preloader" class="preloader loaded" bis_skin_checked="1" style="display: none;">
-        <div class="animation-preloader" bis_skin_checked="1">
-            <div class="spinner" bis_skin_checked="1">
-            </div>
-            <div class="txt-loading" bis_skin_checked="1">
-                <span data-text-preloader="D" class="letters-loading">
-                    S
-                </span>
-                <span data-text-preloader="I" class="letters-loading">
-                    A
-                </span>
-                <span data-text-preloader="G" class="letters-loading">
-                    M
-                </span>
-                <span data-text-preloader="T" class="letters-loading">
-                    A
-                </span>
-                <span data-text-preloader="E" class="letters-loading">
-                    R
-                </span>
-                <span data-text-preloader="K" class="letters-loading">
-                    A
-                </span>
+    <div id="preloader" class="preloader">
+        <div class="animation-preloader">
+            <div class="spinner"></div>
+            <div class="txt-loading">
+                <span data-text-preloader="S" class="letters-loading">S</span>
+                <span data-text-preloader="A" class="letters-loading">A</span>
+                <span data-text-preloader="M" class="letters-loading">M</span>
+                <span data-text-preloader="A" class="letters-loading">A</span>
+                <span data-text-preloader="R" class="letters-loading">R</span>
+                <span data-text-preloader="A" class="letters-loading">A</span>
+                <span data-text-preloader="G" class="letters-loading">G</span>
+                <span data-text-preloader="T" class="letters-loading">T</span>
+                <span data-text-preloader="E" class="letters-loading">E</span>
+                <span data-text-preloader="C" class="letters-loading">C</span>
+                <span data-text-preloader="H" class="letters-loading">H</span>
             </div>
             <p class="text-center">Loading</p>
         </div>
-        <div class="loader" bis_skin_checked="1">
-            <div class="row" bis_skin_checked="1">
-                <div class="col-3 loader-section section-left" bis_skin_checked="1">
-                    <div class="bg" bis_skin_checked="1"></div>
+        <div class="loader">
+            <div class="row">
+                <div class="col-3 loader-section section-left">
+                    <div class="bg"></div>
                 </div>
-                <div class="col-3 loader-section section-left" bis_skin_checked="1">
-                    <div class="bg" bis_skin_checked="1"></div>
+                <div class="col-3 loader-section section-left">
+                    <div class="bg"></div>
                 </div>
-                <div class="col-3 loader-section section-right" bis_skin_checked="1">
-                    <div class="bg" bis_skin_checked="1"></div>
+                <div class="col-3 loader-section section-right">
+                    <div class="bg"></div>
                 </div>
-                <div class="col-3 loader-section section-right" bis_skin_checked="1">
-                    <div class="bg" bis_skin_checked="1"></div>
+                <div class="col-3 loader-section section-right">
+                    <div class="bg"></div>
                 </div>
             </div>
         </div>
     </div>
+
+
 
 
     <!-- Back To Top Start -->
@@ -856,7 +850,7 @@
                                 <div class="sub-title bg-color-3 wow fadeInUp" bis_skin_checked="1"
                                     style="visibility: visible; animation-name: fadeInUp;">
                                     <span class="wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                                        Historia de Exito
+                                        Historias de Exito
                                     </span>
                                 </div>
                                 <h2 class="text-white wow fadeInUp" data-wow-delay=".3s"
